tests/ui/issues/issue-7950.stderr
error[E0599]: no function or associated item named `bar` found for struct `Foo` in the current scope
  --> $DIR/issue-7950.rs:6:10
   |
LL | struct Foo;
   | ---------- function or associated item `bar` not found for this struct
...
LL |     Foo::bar();
   |          ^^^ function or associated item not found in `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
